--- a/Z1/CMakeLists.txt
+++ b/Z1/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(untitled1 LANGUAGES CXX)
+project(Z1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(untitled1 main.cpp)
+add_executable(Z1 main.cpp)
 
 include(GNUInstallDirs)
-install(TARGETS untitled1
+install(TARGETS Z1
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
