--- a/Z2/CMakeLists.txt
+++ b/Z2/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(untitled2 LANGUAGES CXX)
+project(Z2 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(untitled2 main.cpp)
+add_executable(Z2 main.cpp)
 
 include(GNUInstallDirs)
-install(TARGETS untitled2
+install(TARGETS Z2
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
