--- a/Z3/CMakeLists.txt
+++ b/Z3/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(untitled3 LANGUAGES CXX)
+project(Z3 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(untitled3 main.cpp)
+add_executable(Z3 main.cpp)
 
 include(GNUInstallDirs)
-install(TARGETS untitled3
+install(TARGETS Z3
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
