--- a/Z4/CMakeLists.txt
+++ b/Z4/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(untitled4 LANGUAGES CXX)
+project(Z4 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(untitled4 main.cpp)
+add_executable(Z4 main.cpp)
 
 include(GNUInstallDirs)
-install(TARGETS untitled4
+install(TARGETS Z4
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
